auth-service-gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: prod-uk-print
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
